[package]
name = "canbusdaemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "daemon"
path = "src/daemon/main.rs"
[[bin]]
name = "reader"
path = "src/reader/main.rs"

[dependencies]
serialport = "4.0.1"
enigo = "0.0.14"
